# test_qt5_ros

./: CMakeLists.txt  README.md  package.xml
include/: qnode.h  threadcontroller.h  widget.h
src/: main.cpp  qnode.cpp  threadcontroller.cpp  widget.cpp
ui/: widget.ui
